dvdisaster (0.79.5-2) UNRELEASED; urgency=medium

  * Team upload.
  * Bump Standards Version to 4.0.0.
  * Remove unnecessary calls to dpkg-parsechangelog from debian/rules.
  * debian/watch: Avoid repacking upstream tarballs unnecessarily.
  * Fix more typos in error messages and docs.
  * Fix FTBFS on Hurd and kFreeBSD.

 -- Carlos Maddela <e7appew@gmail.com>  Sat, 05 Aug 2017 20:03:21 +1000

dvdisaster (0.79.5-1) unstable; urgency=medium

  [ Carlos Maddela ]
  * Team upload.
  * New upstream version [0.79.5]
  * Refresh and drop patches. The following patches have been dropped:
    + 01-libpng15.patch
    + 06-remove-encoding-from-desktop-file.patch
    + 07-fix-spelling-errors-in-binaries.patch
    + 09-fix-format-security-warnings.patch
    + 21-fix-privacy-breach-in-doco.patch
  * Update license to GPL-3.
  * Update clean rule as old files no longer apply.
  * Update documentation build and install rules.
  * debian/rules: Update mutable file list.
  * Fix generated man pages. The generated man pages incorrectly direct
    users to the directory of the old HTML documentation, which is no
    longer available.
  * Fix display of manual.pdf. The PDF file is automatically compressed
    by Debhelper, so we need to account for this.
  * Resurrect old code to support opening URLs in a browser.
  * Ship upstream-generated manual.pdf for the time being, as we can't
    generate it ourselves reproducibly.

 -- TANIGUCHI Takaki <takaki@debian.org>  Thu, 02 Feb 2017 22:28:25 +0900

dvdisaster (0.72.4-3) unstable; urgency=medium

  [ Carlos Maddela ]
  * Team upload.
  * Bump compat level to 10.
  * debian/watch: Relax upstream version restriction.
  * Use original name for the duplicate uncompressed upstream CHANGELOG.
  * Backup and restore mutable files to allow multiple builds.
  * Fix FTBFS for hurd-i386.

  [ Corey Wright ]
  * Add support for BD-ROM media-type. (Closes: #849518)

 -- Carlos Maddela <e7appew@gmail.com>  Sat, 07 Jan 2017 00:29:19 +1100
