@@ -4,7 +4,6 @@ Subject: Use non-size-specific icon and add keywords to desktop file.
 
 Description: Use non-size-specific icon and add keywords to desktop file.
 Author: Carlos Maddela <e7appew@gmail.com>
-Origin: vendor
 Forwarded: no
 Last-Update: 2016-12-19
 ---
