@@ -4,7 +4,6 @@ Subject: Do not install cruft.
 
 Description: Do not install cruft.
 Author: Carlos Maddela <e7appew@gmail.com>
-Origin: vendor
 Forwarded: not-needed
 Last-Update: 2017-01-05
 ---
