@@ -4,7 +4,6 @@ Subject: Fix spelling: upto -> up to
 
 Description: Fix spelling: upto -> up to
 Author: Carlos Maddela <e7appew@gmail.com>
-Origin: vendor
 Forwarded: no
 Last-Update: 2017-01-05
 ---
