@@ -5,7 +5,6 @@ Subject: Update help dialog to show link to the new Debian package tracker.
 Description: Update help dialog to show link to the new Debian
  package tracker.
 Author: Carlos Maddela <e7appew@gmail.com>
-Origin: vendor
 Forwarded: not-needed
 Last-Update: 2016-12-19
 ---
