@@ -4,7 +4,6 @@ Subject: Update copyright notice in about dialog.
 
 Description: Update copyright notice in about dialog.
 Author: Carlos Maddela <e7appew@gmail.com>
-Origin: vendor
 Forwarded: not-needed
 Last-Update: 2017-01-05
 ---
