@@ -4,7 +4,6 @@ Subject: Update help dialog to show GPL-3 license.
 
 Description: Update help dialog to show GPL-3 license.
 Author: Carlos Maddela <e7appew@gmail.com>
-Origin: vendor
 Forwarded: not-needed
 Last-Update: 2017-01-05
 ---
