@@ -4,7 +4,6 @@ Subject: Resurrect old code to support opening URLs in a browser.
 
 Description: Resurrect old code to support opening URLs in a browser.
 Author: Carlos Maddela <e7appew@gmail.com>
-Origin: vendor
 Forwarded: not-needed
 Last-Update: 2016-12-21
 ---
