@@ -6,6 +6,7 @@ dvdisaster (0.79.5-2) UNRELEASED; urgency=medium
   * debian/watch: Avoid repacking upstream tarballs unnecessarily.
   * Fix more typos in error messages and docs.
   * Fix FTBFS on Hurd and kFreeBSD.
+  * Remove incorrect use of 'Origin: vendor' from DEP-3 patch headers.
 
  -- Carlos Maddela <e7appew@gmail.com>  Sat, 05 Aug 2017 20:03:21 +1000
 
